<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/azul1"
            android:padding="20dp"
            android:paddingBottom="20dp">

        </LinearLayout>


        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/azul1"
            android:padding="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sf_textview_titulo"
                android:text="@string/etiquetaTituloMultimedia"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sf_edittex_titulo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sf_textview_descripcion"
                android:text="@string/etiquetaDescripcionMultimedia"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sf_editText_descripcion" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/botonCargarMultimedia"
                    android:id="@+id/sf_button_cargar"
                    android:layout_alignParentBottom="true"
                    android:layout_toLeftOf="@+id/sf_button_cancelar"
                    android:layout_toStartOf="@+id/sf_button_cancelar" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/botonCancelar"
                    android:id="@+id/sf_button_cancelar"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>


        </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

</ScrollView>

