<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:background="@color/azul1"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul2"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conexion"
        android:background="@color/gray">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/conexion"
            android:padding="5dp"
            android:id="@+id/imageView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/sinConexion"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/buscarPalabra"
            android:hint="@string/campoIntroducirPalabra"
            android:background="@drawable/edittext"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/etiquetaBuscarPalabras"
            android:id="@+id/textView4"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:paddingLeft="5dp"
            android:gravity="center_vertical"
            android:layout_marginTop="31dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/buttonBuscarDirectorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonselect"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:shadowColor="#A8A8A8"
            android:text="@string/botonComenzarBusqueda"
            android:textColor="#FFFFFFFF"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_below="@+id/spinnerTipoBusquedaDirectorio"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiquetaCategoria"
            android:id="@+id/textView5"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:paddingLeft="5dp"
            android:gravity="center_vertical"
            android:layout_below="@+id/buscarPalabra"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCategoriaDirectorio"
            android:entries="@array/spinnerItems"
            style="@style/spinner_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/etiquetaEntradaBusqueda"
            android:id="@+id/textView6"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:paddingLeft="5dp"
            android:gravity="center_vertical"
            android:layout_below="@+id/spinnerCategoriaDirectorio"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerTipoBusquedaDirectorio"
            style="@style/spinner_style"
            android:entries="@array/spinnerItems2"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentStart="true" />


    </RelativeLayout>


</LinearLayout>